https://online.sbis.ru/opendoc.html?guid=e58de644-2c2b-4adb-812b-59e3fb906b0b

--- a/Controls/_datePopup/_DatePopup.less
+++ b/Controls/_datePopup/_DatePopup.less
@@ -90,7 +90,7 @@
 }
 
 .controls-PeriodDialog__homeButton-icon {
-   font-size: @home_icon-size_datePicker;;
+   font-size: @home_icon-size_datePicker;
    line-height: @home_icon-size_datePicker;
    width: @home_icon-size_datePicker;
    height: @home_icon-size_datePicker;
