--- a/Controls/_lookup/SelectedCollection/_SelectedCollection.less
+++ b/Controls/_lookup/SelectedCollection/_SelectedCollection.less
@@ -37,11 +37,14 @@
 }
 
 .controls-SelectedCollection__counterItems {
-    font-size: @font-size_SelectedCollection-counter;
     color: @color_SelectedCollection-counter;
     padding-right: @spacing_SelectedCollection-between-counter-items;
     box-sizing: border-box;
     cursor: pointer;
+}
+
+.controls-SelectedCollection__counterItems_theme-@{themeName} {
+    font-size: @font-size_SelectedCollection-counter;
 }
 
 .ws-is-hover {
@@ -94,30 +97,30 @@
     .text-overflow();
 }
 
-.controls-SelectedCollection__item__caption-size-default,
-.controls-SelectedCollection__item__caption-size-m {
+.controls-SelectedCollection__item__caption-size-default_theme-@{themeName},
+.controls-SelectedCollection__item__caption-size-m_theme-@{themeName} {
     font-size: @font-size_SelectedCollection-size_m;
 }
 
-.controls-SelectedCollection__item__caption-size-l {
+.controls-SelectedCollection__item__caption-size-l_theme-@{themeName} {
     font-size: @font-size_SelectedCollection-size_l;
 }
 
-.controls-SelectedCollection__item__caption-size-xl {
+.controls-SelectedCollection__item__caption-size-xl_theme-@{themeName} {
     font-size: @font-size_SelectedCollection-size_xl;
 }
 
-.controls-SelectedCollection__item__caption-size-2xl {
+.controls-SelectedCollection__item__caption-size-2xl_theme-@{themeName} {
     font-size: @font-size_SelectedCollection-size_2xl;
 }
 
-.controls-SelectedCollection__item__caption-size-3xl {
+.controls-SelectedCollection__item__caption-size-3xl_theme-@{themeName} {
     font-size: @font-size_SelectedCollection-size_3xl;
 }
 
-.controls-SelectedCollection__item__caption-style-bold,
-.controls-SelectedCollection__item__caption-style-accent,
-.controls-SelectedCollection__item__caption-style-primary {
+.controls-SelectedCollection__item__caption-style-bold_theme-@{themeName},
+.controls-SelectedCollection__item__caption-style-accent_theme-@{themeName},
+.controls-SelectedCollection__item__caption-style-primary_theme-@{themeName} {
     font-weight: bold;
 }
 
@@ -126,11 +129,11 @@
     cursor: pointer;
 }
 
-.controls-SelectedCollection__item__caption-style-accent {
+.controls-SelectedCollection__item__caption-style-accent_theme-@{themeName} {
     color: @color_SelectedCollection-item_accent;
 }
 
-.controls-SelectedCollection__item__caption-style-primary {
+.controls-SelectedCollection__item__caption-style-primary_theme-@{themeName} {
     color: @color_SelectedCollection-item_primary;
 }
 
@@ -145,7 +148,7 @@
 .controls-SelectedCollection__collection-default:after,
 .controls-SelectedCollection__collection-oneRow:after {
     content: '\200b';
-    line-height: @line-height_SelectedCollection-item;;
+    line-height: @line-height_SelectedCollection-item;
 }
 
 .controls-SelectedCollection__collection_singleLine {
