https://online.sbis.ru/opendoc.html?guid=73eba339-c290-4d4e-9d39-0b4ff9c49b78

--- a/Controls/_menu/Control/_Control.less
+++ b/Controls/_menu/Control/_Control.less
@@ -225,6 +225,7 @@
    align-items: center;
    width: 100%;
    height: @footer_min-height_menuPopup;
+   padding-left: @item_padding-horizontal_l_menu;
 }
 
 .controls-Menu__additional {
@@ -241,6 +242,10 @@
    padding-left: @apply-button_offset_menuPopup;
    margin-left: auto;
    align-items: center;
+}
+
+.controls-Menu__footer_multiSelect {
+   padding-left: 0;
 }
 
 .ws-is-hover {
