https://online.sbis.ru/opendoc.html?guid=3d641e2b-c0c2-4e19-bf69-e0cffc8c0193

--- a/Controls-demo/Tabs/Buttons/Buttons.less
+++ b/Controls-demo/Tabs/Buttons/Buttons.less
@@ -2,6 +2,8 @@
   padding: 40px;
   width: 100%;
   box-sizing: border-box;
+
+  //цвет текста выбранной вкладки (стиль secondary) в темах - белый. Задали цвет фона демки так, чтобы в темах фон был темный. Нужно для того, чтобы можно было видеть текст.
   background-color: @header_background-color_dialog;
 }
 .for_bg {
