https://online.sbis.ru/opendoc.html?guid=9965a427-25cb-4177-b341-1331c785e71e

--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -357,6 +357,9 @@
 
 .controls-Grid__row-ladder-cell__content {
    .position-sticky();
+   // иначе не будет работать мини-карточка
+   // https://online.sbis.ru/opendoc.html?guid=9965a427-25cb-4177-b341-1331c785e71e
+   pointer-events: auto;
 }
 
 .controls-Grid__row-cell_first-row-in-group {
