https://online.sbis.ru/opendoc.html?guid=fe99ed2e-de5f-4f8f-b6ad-748769960801

--- a/Controls/_menu/Popup/_Popup.less
+++ b/Controls/_menu/Popup/_Popup.less
@@ -56,5 +56,5 @@
 }
 
 .controls-Menu__popup_headerIcon_theme-@{themeName} {
-   color: @header_color_menuPopup;
+   color: @header_color_sticky;
 }
