https://online.sbis.ru/opendoc.html?guid=fe99ed2e-de5f-4f8f-b6ad-748769960801

--- a/Controls-default-theme/aliases/_popupTemplate.less
+++ b/Controls-default-theme/aliases/_popupTemplate.less
@@ -106,6 +106,12 @@
 // минимальная высота шапки выпадающего списка
 @header_min-height_sticky:                                                  32px;
 
+// размер шрифта в шапке выпадающего списка
+@header_font-size_sticky:                                                   @font-size_l;
+
+// цвет заголовка в шапке выпадающего списка
+@header_color_sticky:                                                       @secondary_text-color;
+
 // отступ между кнопкой закрытия и верхней границей выпадающего списка
 @close-button_offset-top_sticky:                                            6px;
 
