https://online.sbis.ru/opendoc.html?guid=fe99ed2e-de5f-4f8f-b6ad-748769960801

--- a/Controls/_popupTemplate/Sticky/_Sticky.less
+++ b/Controls/_popupTemplate/Sticky/_Sticky.less
@@ -69,7 +69,7 @@
 }
 
 .controls-StickyTemplate__caption_theme-@{themeName} {
-   font-size: @header_font-size_sticky;
+   font-size: @header_font-size_menuPopup;
    font-weight: bold;
-   color: @header_color_sticky;
+   color: @header_color_menuPopup;
 }
