https://online.sbis.ru/opendoc.html?guid=368791fd-4c17-42fa-9e58-6a084f5fc51f Сделал рассчёт и проброс опции size для компонентов и шаблонов breadcrumbs

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -12,9 +12,13 @@
    white-space: nowrap;
 
    //TODO KINGO есть темы, в которых выравнивание ХК идет по базовой линии шрифта, размер которого отличается от размера шрифта кнопки назад
-   .controls-Back__wrapper_theme-@{themeName}:before {
+   .controls-Back__wrapper_s_theme-@{themeName}::before {
       font-size:@font-size_BreadCrumbs-baseline;
    }
+
+   .controls-Back__wrapper_m_theme-@{themeName}::before {
+      font-size: @font-size_BreadCrumbs-home;
+}
 }
 
 .controls-BreadCrumbsPath__backButton {
@@ -72,9 +76,14 @@
 }
 .controls-BreadCrumbsPath__backButtonArrow-container_theme-@{themeName} {
    background-color: @background-color_Path-backButtonArrow;
-   &:before {
-      font-size:@font-size_BreadCrumbs-baseline;
    }
+
+.controls-BreadCrumbsPath__backButtonArrow-container_size-m_theme-@{themeName}::before {
+   font-size: @font-size_BreadCrumbs-home;
+}
+
+.controls-BreadCrumbsPath__backButtonArrow-container_size-s_theme-@{themeName}::before {
+   font-size: @font-size_BreadCrumbs;
 }
 
 .controls-BreadCrumbsPath__backButtonArrow {
@@ -116,8 +125,8 @@
    align-items: baseline;
 }
 .controls-BreadCrumbsPath__homeContainer_theme-@{themeName} {
-   &:before {
-      font-size: @font-size_BreadCrumbs-baseline;
+   &::before {
+      font-size: @font-size_BreadCrumbs-home;
    }
 }
 
