--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -41,14 +41,17 @@
 .controls-BreadCrumbsView__crumb_theme-@{themeName} {
    height: @height_BreadCrumbs-items;
    color: @color_BreadCrumbs-title;
-   &:before {
-      font-size: @font-size_BreadCrumbs-baseline;
-   }
    padding-right: @spacing_default_xxs;
 }
-.controls-BreadCrumbsView__crumb__left_edge {
-   padding: 0 @spacing_default_xxs;
+
+.controls-BreadCrumbsView__crumb_size-s_theme-@{themeName}:before {
+   font-size: @font-size_BreadCrumbs-baseline;
 }
+
+.controls-BreadCrumbsView__crumb_size-m_theme-@{themeName}:before {
+   font-size: @font-size_BreadCrumbs-home;
+}
+
 .controls-BreadCrumbsView__menu {
    float: right;
    position: relative;
@@ -70,9 +73,14 @@
    box-shadow: @box-shadow_BreadCrumbs-menu;
    color: @color_BreadCrumbs-title;
    height: @height_BreadCrumbs-items;
-   &:before {
-      font-size: @font-size_BreadCrumbs-baseline;
    }
+
+.controls-BreadCrumbsView__menu__dots_size-s_theme-@{themeName}::before {
+   font-size: @font-size_BreadCrumbs;
+}
+
+.controls-BreadCrumbsView__menu__dots_size-m_theme-@{themeName}::before {
+   font-size: @font-size_BreadCrumbs-home;
 }
 
 .controls-BreadCrumbsView__max-width {
