https://online.sbis.ru/opendoc.html?guid=ebf550cb-6332-44db-b722-abfddb5113c1

--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -146,6 +146,8 @@
 
 .controls-Grid__row-cell_colspaned {
    flex-grow: 1;
+   box-sizing: border-box;
+   max-width: 100%;
 }
 
 .controls-Grid__itemAction.controls-itemActionsV_outside {
