https://online.sbis.ru/opendoc.html?guid=095c3530-e38e-41cf-897a-7f047a29b48b

--- a/Controls-default-theme/aliases/_toggle.less
+++ b/Controls-default-theme/aliases/_toggle.less
@@ -37,7 +37,7 @@
 
 
 
-// Переменные переключателей
+// Переменные для переключателей
 //
 // Размеры
 
@@ -51,6 +51,7 @@
 @border-color_switcher:                                                     #E4E4E4;
 
 // Текст
+
 @font-size_switcher:                                                        @font-size_m;
 @text_offset_switcher:                                                      6px;
 @text-color_switcher:                                                       @text-color;
