https://online.sbis.ru/opendoc.html?guid=ad539fe6-10f1-4349-a512-50ceae24af71

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -132,6 +132,10 @@
 
 //FilterPanel
 @background-color_vertical_filterPanel:                  #383d44;
+
+@extended_heading_text-color_filterPanel:                @secondary_text-color;
+@history_heading_text-color_filterPanel:                 @secondary_text-color;
+
 @history_item_pin-button_icon-color_filterPanel:         @secondary_color;
 @history_item_pin-button_hover_icon-color_filterPanel:   #ff7033;
 @history_vertical_item_text-color_filterPanel:           @secondary_color;
