https://online.sbis.ru/opendoc.html?guid=1c240bad-7763-4ab1-b232-595d3a32a050

--- a/Controls/_menu/Control/_Control.less
+++ b/Controls/_menu/Control/_Control.less
@@ -223,7 +223,6 @@
    display: flex;
    align-items: center;
    height: @footer_min-height_menuPopup;
-   padding-left: @item_padding-horizontal_l_menu;
 }
 
 .controls-Menu__additional {
@@ -231,15 +230,22 @@
    justify-content: center;
    align-items: center;
    width: 100%;
-   margin-right: @spacing_ListView-item-between-content-borderRight_l;
 }
 
 .controls-Menu__applyButton_theme-@{themeName} {
    display: flex;
    padding-right: @item_padding-horizontal_l_menu;
-   padding-left: @apply-button_offset_menuPopup;
+   padding-left: @item_padding-horizontal_l_menu;
    margin-left: auto;
    align-items: center;
+}
+
+.controls-Menu__footer_moreButton_theme-@{themeName} {
+   padding-left: @item_padding-horizontal_l_menu;
+}
+
+.controls-Menu__footer_moreButton_multiSelect_theme-@{themeName} {
+   padding-left: @click-area_width_checkbox;
 }
 
 .controls-inlineheight-menuapply_theme-default {
@@ -263,10 +269,6 @@
 
 .controls-Menu__row-breadcrumbs_theme-@{themeName} {
    max-height: @height_breadcrumbsView;
-}
-
-.controls-Menu__footer_multiSelect {
-   padding-left: 0;
 }
 
 .ws-is-hover {
