--- a/Controls/_LoadingIndicator/LoadingIndicator.less
+++ b/Controls/_LoadingIndicator/LoadingIndicator.less
@@ -2,13 +2,16 @@
    .flexbox();
    .justify-content(center);
    .align-items(center);
-   background-color: @color_LoadingIndicator-overlay-default;
    cursor: default !important;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
+}
+
+.controls-loading-indicator_theme-@{themeName}{
+   background-color: @color_LoadingIndicator-overlay-default;
 }
 
 // Необходимо навесить z-index на индикатор и контент для правильный работы контекста z-index`ов
@@ -46,7 +49,7 @@
    cursor: auto !important;
 }
 
-.controls-loading-indicator_overlay-dark {
+.controls-loading-indicator_overlay-dark_theme-@{themeName} {
     background-color: @color_LoadingIndicator-overlay-dark;
 }
 
@@ -73,35 +76,44 @@
 .controls-loading-indicator-in {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
-   width: @size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l;
-   height: @size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l;
    overflow: hidden;
-   border-radius: @border-radius_LoadingIndicator;
-   background: @background-color_LoadingIndicator @background-url_LoadingIndicator-l 50% 50% no-repeat;
-   background-size: @size_LoadingIndicator-l;
    cursor: default !important;
    pointer-events: auto;
    font-family: 'TensorFont Обычный', 'TensorFont Regular', 'TensorFont', sans-serif;
+}
+
+.controls-loading-indicator-in_theme-@{themeName} {
+   width: @size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l;
+   height: @size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l;
+   border-radius: @border-radius_LoadingIndicator;
+   background: @background-color_LoadingIndicator @background-url_LoadingIndicator-l 50% 50% no-repeat;
+   background-size: @size_LoadingIndicator-l;
    font-size: @font-size_LoadingIndicator;
    line-height: @line-height_LoadingIndicator;
    color: @color_LoadingIndicator-text;
 }
 
 .controls-loading-indicator_text .controls-loading-indicator-in {
-   min-width: @size_LoadingIndicator-l + 3*@spacing_LoadingIndicator-between-content-border-l;
    width: auto;
-   padding: (@size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l - @line-height_LoadingIndicator)/2
-   @spacing_LoadingIndicator-between-content-border-l 0 (@size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l);
-   background-position:@spacing_LoadingIndicator-between-content-border-l 50%;
    white-space: nowrap;
    text-overflow: ellipsis;
 }
 
+.controls-loading-indicator_text .controls-loading-indicator-in_theme-@{themeName} {
+   min-width: @size_LoadingIndicator-l + 3*@spacing_LoadingIndicator-between-content-border-l;
+   padding: (@size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l - @line-height_LoadingIndicator)/2
+   @spacing_LoadingIndicator-between-content-border-l 0 (@size_LoadingIndicator-l + 2*@spacing_LoadingIndicator-between-content-border-l);
+   background-position:@spacing_LoadingIndicator-between-content-border-l 50%;
+}
+
 .controls-loading-indicator_small .controls-loading-indicator-in {
+   background-color: transparent;
+}
+
+.controls-loading-indicator_small .controls-loading-indicator-in_theme-@{themeName} {
    width: @size_LoadingIndicator-s + 2*@spacing_LoadingIndicator-between-content-border-s;
    height: @size_LoadingIndicator-s + 2*@spacing_LoadingIndicator-between-content-border-s;
    border-radius: (@size_LoadingIndicator-s + 2*@spacing_LoadingIndicator-between-content-border-s)/4;
-   background-color: transparent;
    background-image: @background-url_LoadingIndicator-s;
    background-size: @size_LoadingIndicator-s;
 }
