--- a/Controls-default-theme/_notAliasesToDelete.less
+++ b/Controls-default-theme/_notAliasesToDelete.less
@@ -199,7 +199,7 @@
 @padding_List-editAtPlace:                                        4px;
 @background-image_AddButton_enable_val:         url('../Controls-default-theme/img/AddButtonEnable.svg');
 @background-image_AddButton_disable_val:        url('../Controls-default-theme/img/AddButtonDisable.svg');
-@spacing_ListAddButton-between-icon-and-text_val:                 0;
+@spacing_ListAddButton-between-icon-and-text_val:                 4px;
 
 // EmptyTemplate
 @font-size_ListView-empty-template_val: 15px;
