https://online.sbis.ru/opendoc.html?guid=14a06c1e-cd8b-4484-8029-18a037ddc713

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -57,7 +57,10 @@
    align-self: flex-start;
    max-width: 100%;
 }
-
+.controls-BreadCrumbsPath__homeContainer.controls-BreadCrumbsView__dropTarget_withoutArrow:after {
+   left: -@spacing_BreadCrumbs-between-item-border;
+   right: -@spacing_BreadCrumbs-between-item-border;
+}
 .controls-BreadCrumbsPath__backButtonArrow-container {
    .baseline-fix();
    height: 100%;
