--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -44,10 +44,10 @@
    &:before {
       font-size: @font-size_BreadCrumbs-baseline;
    }
-   padding-right: 2px;
+   padding-right: @spacing_default_xxs;
 }
 .controls-BreadCrumbsView__crumb__left_edge {
-   padding: 0 2px;
+   padding: 0 @spacing_default_xxs;
 }
 .controls-BreadCrumbsView__menu {
    float: right;
