https://online.sbis.ru/opendoc.html?guid=372e43e2-d030-4184-b776-5d104cb1b016

--- a/Controls/_menu/Popup/_Popup.less
+++ b/Controls/_menu/Popup/_Popup.less
@@ -55,6 +55,7 @@
    display: flex;
    align-items: center;
    overflow: hidden;
+   cursor: default;
 }
 
 .controls-Menu__popup_headerIcon_padding_theme-@{themeName} {
