--- a/Controls/_grid/_ColumnScroll.less
+++ b/Controls/_grid/_ColumnScroll.less
@@ -27,13 +27,7 @@
    visibility: hidden;
 }
 
-.controls-ColumnScroll__shadow-start_theme-@{themeName} {
-   background: linear-gradient(to right, @start-color-gradient_ColumnScroll-shadow, @end-color-gradient_ColumnScroll-shadow);
-   border-left: 1px solid @border-color_ColumnScroll-shadow;
-}
-
 .controls-ColumnScroll__shadow-end_theme-@{themeName} {
-   background: linear-gradient(to left, @start-color-gradient_ColumnScroll-shadow, @end-color-gradient_ColumnScroll-shadow);
-   border-right: 1px solid @border-color_ColumnScroll-shadow;
    right: 0;
+   transform: scaleX(-1);
 }
