https://online.sbis.ru/opendoc.html?guid=74c2738a-31c6-4c75-9f3e-5411d2711ae1

--- a/Controls-default-theme/aliases/_filterPopup.less
+++ b/Controls-default-theme/aliases/_filterPopup.less
@@ -66,6 +66,9 @@
 //размер шрифта элемента в панели фильтра
 @item_font-size_filterPanel:                                                @font-size_default;
 
+//отступ сверху от контента основного блока
+@basic_content_padding-top_filterPanel:                                     0;
+
 //отступ слева от контента основного блока
 @basic_content_padding-left_filterPanel:                                    24px;
 
