Пара алиасов чтоб показать темную тему

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -161,6 +161,10 @@
 @marker-bg-image:                                                             url("img/rowSelect.png");
 @readonly_marker-color:                                                       @readonly_color;
 
+@background-color_List-masterList:                                            #30343b;
+@background-color_List-masterList-item_selected:                              #424851;
+@border-color_List-masterList:                                                #18212b;
+
 // Controls.Explorer
 @background-color_TileView-item: #464d57;
 
