https://online.sbis.ru/opendoc.html?guid=510b66fa-a43b-436e-8b27-b55dd8c1447e

--- a/Controls/_menu/Popup/_Popup.less
+++ b/Controls/_menu/Popup/_Popup.less
@@ -1,4 +1,4 @@
-.controls-Menu__popup_theme-@{themeName} {
+.controls-Menu__popup.controls-Menu__popup_theme-@{themeName} {
    max-width: @popup_max-width_menuPopup;
 }
 
