--- a/Controls/_scroll/StickyHeader/_StickyHeader/_StickyHeader.less
+++ b/Controls/_scroll/StickyHeader/_StickyHeader/_StickyHeader.less
@@ -14,7 +14,9 @@
    right: 0;
    height: 1px;
    // В safari 13 неправильно рассчитывается ширина, через left: 0; right: 0; Ограничим ее.
-   max-width: 1px;
+   // В случае max-width: 1px safari 13 считает, что scrollWidth элемента 1px, тогда как его offsetWidth 0px.
+   // в результате начинает рассчёты StickyHeader тогда, когда это не нужно
+   width: 0;
    position: absolute;
 }
 
