https://online.sbis.ru/opendoc.html?guid=6f2771b2-38e2-4e3e-bfa2-95cf9f2abbb0

--- a/Controls-demo/Combobox/ComboboxVDom.less
+++ b/Controls-demo/Combobox/ComboboxVDom.less
@@ -9,7 +9,7 @@
 }
 
 .ControlsDemo-ComboboxVDOM__popupScroll {
-   height: 400px;
+   max-height: 400px;
 }
 
 .ControlsDemo-ComboboxVDOM__itemBig {
