--- a/Controls-demo/Input/Dropdown/Dropdown.less
+++ b/Controls-demo/Input/Dropdown/Dropdown.less
@@ -27,7 +27,7 @@
 }
 
 .ControlsDemo-InputDropdown__scroll {
-   height: 300px;
+   max-height: 300px;
 }
 
 .ControlsDemo-InputDropdown-bottom-right {
