--- a/Controls/_popupTemplate/Sticky/_Sticky.less
+++ b/Controls/_popupTemplate/Sticky/_Sticky.less
@@ -25,6 +25,7 @@
    flex-shrink: 0;
    padding-left: @header_padding-horizontal_sticky;
    min-height: @header_min-height_sticky;
+   height: 100%;
    background: @header_background-color_sticky;
 }
 
