https://online.sbis.ru/opendoc.html?guid=81cb96fd-ed77-43ad-aa63-12e61aefdff4

--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -52,6 +52,7 @@
 .controls-BreadCrumbsView__menu {
    float: right;
    position: relative;
+   //не должно перекрывать тень сколла
    z-index: 5;
 }
 .controls-BreadCrumbsView__menu_theme-@{themeName} {
