--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -52,7 +52,7 @@
 .controls-BreadCrumbsView__menu {
    float: right;
    position: relative;
-   //не должно перекрывать тень сколла
+   //не должно перекрывать тень скролла
    z-index: 5;
 }
 .controls-BreadCrumbsView__menu_theme-@{themeName} {
