--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -48,7 +48,7 @@
 @invalid_background-color_inputText:                  transparent;
 
 //dialog
-@background-color_dialog:                             #4a515d;
+@background-color_dialog:                             #383D44;
 @header_background-color_dialog:                      #383D44;
 @border-color_dialog:                                 #535C68;
 @footer_background-color_dialog:                      transparent;
