https://online.sbis.ru/opendoc.html?guid=dd9affba-7128-46b2-a760-0ae9d300fd09

--- a/Controls-default-theme/aliases/_filterPopup.less
+++ b/Controls-default-theme/aliases/_filterPopup.less
@@ -140,8 +140,8 @@
 @history_item_pin-button_icon-size_filterPanel:                             @icon-size_s;
 @history_item_pin-button_padding-left_filterPanel:                          12px;
 @history_item_pin-button_icon-color_filterPanel:                            @unaccented_icon-color;
-@history_item_pin-button_hover_icon-color_filterPanel:                      @link_hover_text-color;
-@history_item_pin-button_toggled_icon-color_filterPanel:                    @link_hover_text-color;
+@history_item_pin-button_hover_icon-color_filterPanel:                      @secondary_hover_icon-color;
+@history_item_pin-button_toggled_icon-color_filterPanel:                    @secondary_hover_icon-colorr;
 
 
 
