--- a/Controls-default-theme/aliases/_input.less
+++ b/Controls-default-theme/aliases/_input.less
@@ -97,8 +97,8 @@
 
 @trigger-offset_inputDate:                                                  8px;
 @trigger_icon-size_inputDate:                                               @icon-size_s;
-@trigger_icon-color_inputDate:                                              @secondary_color;
-@trigger_hover_icon-color_inputDate:                                        @link_hover_text-color;
+@trigger_icon-color_inputDate:                                              @secondary_icon-color;
+@trigger_hover_icon-color_inputDate:                                        @secondary_hover_icon-color;
 @trigger_active_icon-color_inputDate:                                       @trigger_hover_icon-color_inputDate;
 
 // Переменные для меток
