--- a/Controls-default-theme/aliases/_lookup.less
+++ b/Controls-default-theme/aliases/_lookup.less
@@ -14,8 +14,8 @@
 @trigger_offset_lookupInput:                                                    4px;
 @trigger_icon-size_lookupInput:                                                 @icon-size_s;
 @trigger_icon-color_lookupInput:                                                @label_text-color;
-@trigger_hover_icon-color_lookupInput:                                          @link_hover_text-color;
-@trigger_active_icon-color_lookupInput:                                         @link_hover_text-color;
+@trigger_hover_icon-color_lookupInput:                                          @secondary_hover_icon-color;
+@trigger_active_icon-color_lookupInput:                                         @secondary_hover_icon-color;
 
 // Кнопка сброса всех выбранных значений
 
