--- a/Controls-default-theme/aliases/_operations.less
+++ b/Controls-default-theme/aliases/_operations.less
@@ -7,9 +7,9 @@
 
 // Иконка
 
-@icon-color_operationsButton:                                               @secondary_color;
-@icon-color_hover_operationsButton:                                         @link_hover_text-color;
-@icon-color_active_operationsButton:                                        @link_hover_text-color;
+@icon-color_operationsButton:                                               @secondary_icon-color;
+@icon-color_hover_operationsButton:                                         @secondary_hover_icon-color;
+@icon-color_active_operationsButton:                                        @secondary_hover_icon-color;
 @readonly_icon-color_operationsButton:                                      @readonly_color;
 @icon-size_operationsButton:                                                18px;
 
