--- a/Controls-default-theme/aliases/_popupTemplate.less
+++ b/Controls-default-theme/aliases/_popupTemplate.less
@@ -59,7 +59,7 @@
 
 // Границы
 
-@border-color_sticky:                                                       #CCCCCC;
+@border-color_sticky:                                                       @border-color;
 @border-thickness_sticky:                                                   @border-thickness;
 
 @header_bottom-border-color_sticky:                                         #F0F0F0;
@@ -83,7 +83,7 @@
 // Кнопка для вызова инфобокса
 
 @icon-color_infobox_button:                                                 @unaccented_icon-color;
-@icon-color_hover_infobox_button:                                           @link_hover_text-color;
+@icon-color_hover_infobox_button:                                           @secondary_hover_icon-color;
 
 // Стрелка инфобокса
 
