--- a/Controls-default-theme/aliases/_search.less
+++ b/Controls-default-theme/aliases/_search.less
@@ -31,9 +31,9 @@
 // Иконка поиска
 
 @trigger_icon-size_searchInput:                                             @icon-size_s;
-@trigger_icon-color_searchInput:                                            @secondary_color;
-@trigger_icon-color_hover_searchInput:                                      @link_hover_text-color;
-@trigger_icon-color_active_searchInput:                                     @link_hover_text-color;
+@trigger_icon-color_searchInput:                                            @secondary_icon-color;
+@trigger_icon-color_hover_searchInput:                                      @secondary_hover_icon-color;
+@trigger_icon-color_active_searchInput:                                     @secondary_hover_icon-color;
 @readonly_trigger_icon-color_searchInput:                                   @readonly_color;
 
 // Иконка сброса
