--- a/Controls-default-theme/aliases/_shortDatePicker.less
+++ b/Controls-default-theme/aliases/_shortDatePicker.less
@@ -116,8 +116,8 @@
 // Стрелки - элементы списка в режиме годов
 
 @arrow_icon-color_shortDatePicker:                    @link_text-color;
-@arrow_hover_icon-color_shortDatePicker:              @link_hover_text-color;
-@arrow_active_icon-color_shortDatePicker:             @link_hover_text-color;
+@arrow_hover_icon-color_shortDatePicker:              @secondary_hover_icon-color;
+@arrow_active_icon-color_shortDatePicker:             @secondary_hover_icon-color;
 @arrow_height_shortDatePicker:                        32px;
 @arrow_icon-size_shortDatePicker:                     @icon-size_s;
 
