--- a/Controls-default-theme/aliases/_slider.less
+++ b/Controls-default-theme/aliases/_slider.less
@@ -33,7 +33,7 @@
 
 @scale_font-size_slider:                                                    @font-size_m;
 @scale_text-color_slider:                                                   @unaccented_text-color;
-@readonly_scale_text-color_slider:                                          #CCCCCC;
+@readonly_scale_text-color_slider:                                          @readonly_color;
 
 @tick_height_slider:                                                        4px;
 @tick_thickness_slider:                                                     1px;
