--- a/Controls-default-theme/aliases/_suggest.less
+++ b/Controls-default-theme/aliases/_suggest.less
@@ -3,7 +3,7 @@
 // Граница
 
 @popup_border-thickness_suggest:                        @border-thickness;
-@popup_border-color_suggest:                            #ccc;
+@popup_border-color_suggest:                            @border-color;
 @box-shadow-color_suggest:                              rgba(0,0,0,0.2);
 @box-shadow-offset_suggest:                             4px;
 @box-shadow-blur_suggest:                               6px;
