--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -9,7 +9,10 @@
 @secondary_hover_text-color:                          #FF7033;
 @readonly_color:                                      #6B6B6B;
 @text-color:                                          #CCCCCC;
+@border-color:                                        #4d535e;
 @icon-color:                                          #CCCCCC;
+@secondary_icon-color:                                @secondary_color;
+@secondary_hover_icon-color:                          @link_hover_text-color;
 @contrast_icon-color:                                 #383D44;
 @label_text-color:                                    #CCCCCC;
 @link_text-color:                                     #6ED4D0;
