--- a/Controls-default-theme/aliases/_breadcrumbs.less
+++ b/Controls-default-theme/aliases/_breadcrumbs.less
@@ -24,8 +24,8 @@
 // Иконки
 @item_icon-size_default_breadcrumbsView:                               @icon-size_s;
 @item_icon-color_default_breadcrumbsView:                              @label_text-color;
-@item_hover_icon-color_default_breadcrumbsView:                        @link_hover_text-color;
-@item_active_icon-color_default_breadcrumbsView:                       @link_hover_text-color;
+@item_hover_icon-color_default_breadcrumbsView:                        @secondary_hover_icon-color;
+@item_active_icon-color_default_breadcrumbsView:                       @secondary_hover_icon-color;
 
 
 
@@ -55,8 +55,8 @@
 
 @home_icon-size_breadcrumbsPath:                                       @icon-size_s;
 @home_icon-color_breadcrumbsPath:                                      @label_text-color;
-@home_hover_icon-color_breadcrumbsPath:                                @link_hover_text-color;
-@home_active_icon-color_breadcrumbsPath:                               @link_hover_text-color;
+@home_hover_icon-color_breadcrumbsPath:                                @secondary_hover_icon-color;
+@home_active_icon-color_breadcrumbsPath:                               @secondary_hover_icon-color;
 @home_offset_breadcrumbsPath:                                          4px;
 
 
@@ -68,9 +68,9 @@
 @back_offset_breadcrumbsHeadingPath:                                   8px;
 @back_editButton_background-color_breadcrumbsHeadingPath:              @background-color;
 @back_editButton_icon-size_breadcrumbsHeadingPath:                     @icon-size_s;
-@back_editButton_icon-color_breadcrumbsHeadingPath:                    @secondary_color;
-@back_editButton_hover_icon-color_breadcrumbsHeadingPath:              @link_hover_text-color;
-@back_editButton_active_icon-color_breadcrumbsHeadingPath:             @link_hover_text-color;
+@back_editButton_icon-color_breadcrumbsHeadingPath:                    @secondary_icon-color;
+@back_editButton_hover_icon-color_breadcrumbsHeadingPath:              @secondary_hover_icon-color;
+@back_editButton_active_icon-color_breadcrumbsHeadingPath:             @secondary_hover_icon-color;
 @back_editButton_readonly_icon-color_breadcrumbsHeadingPath:           @readonly_color;
 @back_counter_offset_breadcrumbsHeadingPath:                           4px;
 
