--- a/Controls/_masterDetail/Base/_Base.less
+++ b/Controls/_masterDetail/Base/_Base.less
@@ -50,7 +50,7 @@
 
 // Класс для установки фона контрола через backgroundStyle (master)
 .controls-background-master_theme-@{themeName} {
-   background-color: @background-color_default;
+   background-color: @background-color;
 }
 
 // Класс для установки фона контрола через backgroundStyle (detail)
@@ -59,8 +59,7 @@
 }
 
 // Набор классов для установки градиента горизонтального скролла через backgroundStyle (master, detail)
-.controls-horizontal-gradient-master_theme-@{themeName},
-.controls-horizontal-gradient-detail_theme-@{themeName} {
+.controls-horizontal-gradient-master_theme-@{themeName} {
    background: linear-gradient(to right, @start-color-gradient_ColumnScroll-shadow, @end-color-gradient_ColumnScroll-shadow);
    border-left: 1px solid @border-color_ColumnScroll-shadow;
 }
