--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -52,7 +52,8 @@
 .controls-BreadCrumbsView__menu {
    float: right;
    position: relative;
-   z-index: 10;
+   //обводка dragNDrop должна уходить в тень меню.
+   z-index: 2;
 }
 .controls-BreadCrumbsView__menu_theme-@{themeName} {
    bottom: @height_BreadCrumbs-items;
@@ -100,7 +101,7 @@
       position: absolute;
       display: block;
       border-radius: @border-radius_BreadCrumbs-item_dropTarget;
-      z-index: 10;
+      z-index: 1;
       align-self: center;
    }
 }
