https://online.sbis.ru/opendoc.html?guid=7850eeb3-67d8-4b96-bfff-a541d14df742

--- a/Controls/_buttons/_Button.less
+++ b/Controls/_buttons/_Button.less
@@ -146,6 +146,10 @@
    .controls-BaseButton:hover .controls-text-link_theme-@{themeName} {
       color: @link_hover_text-color;
    }
+
+   .controls-BaseButton:hover .controls-text-label_theme-@{themeName} {
+      color: @link_hover_text-color;
+   }
 }
 
 .ws-is-no-touch, .ws-is-touch {
