--- a/Controls/_buttons/_Button.less
+++ b/Controls/_buttons/_Button.less
@@ -156,6 +156,10 @@
    .controls-BaseButton:active .controls-text-link_theme-@{themeName} {
       color: @link_hover_text-color;
    }
+
+   .controls-BaseButton:active .controls-text-label_theme-@{themeName} {
+      color: @link_hover_text-color;
+   }
 }
 
 .controls-Button__text_gap_theme-@{themeName} {
