https://online.sbis.ru/opendoc.html?guid=029639a4-3635-411b-a3ea-231abae97961

--- a/Controls/_menu/Popup/_MenuPopup.less
+++ b/Controls/_menu/Popup/_MenuPopup.less
@@ -27,7 +27,8 @@
    margin-left: @popup_offset-left_default_menu_button;
 }
 
-.controls-MenuButton_link__m_popup, .controls-MenuButton_link_iconSize-small_popup.theme_@{themeName} {
+.controls-MenuButton_link__m_popup,
+.controls-MenuButton_link_iconSize-small_popup.theme_@{themeName} {
    margin-top: -((@item_height_menu - @inline_height_default_link_button) / 2 + @border-thickness_sticky);
    margin-left: -@padding-horizontal_default_menu;
 }
@@ -64,6 +65,7 @@
 }
 
 @padding-horizontal_duplicate-head: @item_padding-horizontal_l_menu + @border-thickness_sticky;
+
 .controls-MenuButton_link_iconSize-small_duplicate_popup.theme_@{themeName} {
    margin-top: -(@content_padding-top_sticky + @border-thickness_sticky + (@item_height_menu - @inline_height_default_link_button) / 2);
    margin-left: -@padding-horizontal_duplicate-head;
