https://online.sbis.ru/opendoc.html?guid=5dbb26e2-a3c7-44e8-a912-ca4fe94a7b40

--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -53,8 +53,8 @@
    float: right;
    position: relative;
 
-  /* Обводка dragNDrop должна уходить в тень меню.(Раньше были высокие z-index-ы, поставила минимальные,
-  так как в них нет необходимости). Сейчас у тени скролла z-index 5, поэтому она будет над крошками.*/
+   /* Обводка dragNDrop должна уходить в тень меню, т.к. у нее z-index: 1, то для меню и его тени выставляем z-index выше.
+    Сейчас у тени скролла z-index 5, поэтому она будет над крошками.*/
    z-index: 2;
 }
 .controls-BreadCrumbsView__menu_theme-@{themeName} {
