https://online.sbis.ru/opendoc.html?guid=368791fd-4c17-42fa-9e58-6a084f5fc51f Поправил значения согласно рекомендациям

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -8,8 +8,9 @@
 }
 
 .controls-BreadCrumbsPath__wrapper {
-   display: flex;
+   display: inline-flex;
    white-space: nowrap;
+   align-items: baseline;
 
    //TODO KINGO есть темы, в которых выравнивание ХК идет по базовой линии шрифта, размер которого отличается от размера шрифта кнопки назад
    .controls-Back__wrapper::before {
