--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -25,7 +25,7 @@
 
 .controls-BreadCrumbsView__items__middle {
    overflow: hidden;
-   display: inline-block;
+   display: inline-flex;
    white-space: nowrap;
    flex-shrink: 1;
    font-size: 0;
