--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -47,7 +47,9 @@
       font-size: @font-size_BreadCrumbs-baseline;
    }
 }
-
+.controls-BreadCrumbsView__crumb__left_edge {
+   padding: 0 @spacing_default_xxs;
+}
 .controls-BreadCrumbsView__menu {
    float: right;
    position: relative;
