--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -13,7 +13,7 @@
    align-items: baseline;
 
    //TODO KINGO есть темы, в которых выравнивание ХК идет по базовой линии шрифта, размер которого отличается от размера шрифта кнопки назад
-   .controls-Back__wrapper::before {
+   .controls-Back__wrapper_theme-@{themeName}::before {
       font-size: @font-size_BreadCrumbs-baseline;
    }
 }
