https://online.sbis.ru/opendoc.html?guid=90bcf245-5f5b-44ac-8767-7e5b8e5d5341

--- a/Controls/_calendar/MonthView/_MonthView.less
+++ b/Controls/_calendar/MonthView/_MonthView.less
@@ -53,6 +53,9 @@
    .controls-MonthViewVDOM__border-currentMonthDay-unselected {
       &:hover {
          outline: @border-thickness__MonthView-item solid @border-color__MonthView-item-hover;
+         //В EDGE и IE слипаются пиксели просле наведения на блок с днём, блок сверху станет на 1px визуально больше.
+         // Обновляем margin-top по хаверу.
+         margin-top: 0;
       }
    }
 }
