https://online.sbis.ru/opendoc.html?guid=2b9c9e47-b0e3-47e0-ba5d-2daba386e365

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -152,7 +152,13 @@
 // Suggest
 @popup_border-color_suggest:                                                  #4d535e;
 
-
+//MonthView
+@monthview_background-color_monthSlider:                                      #383d44;
+@rangeSelection_item_background-color_datePicker:                             #737c8b;
+@rangeSelection_border_color_datePicker:                                      #ff7033;
+@monthview_item_background-color_monthSlider:                                 #424851;
+@monthview_item_text-color_monthSlider:                                       #b8b8b8;
+@monthview_item_hover_border-color_monthSlider:                               #b8b8b8;
 
 //TODO OLD NOT SPECIFIED VARIABLES
 
@@ -197,7 +203,6 @@
 @color_Grid-header:                                                           #999;
 @background-color_StickyHeader:                                               transparent;
 
-
 // ItemActions
 @default-bg-color-hovered-item: #464d57;
 @background-color_ItemActions: #464d57;
@@ -215,14 +220,6 @@
 @color_PeriodDialog-dateRange-months-button:                                  #b8b8b8;
 @border-color_PeriodDialog-dateRange-months:                                  #535c68;
 @color_PeriodDialog-dateRange-monthsWithDates-title:                          #cccccc;
-
-//MonthView
-@background_MonthView:                                                        #383d44;
-@background_MonthView-item-selected:                                          #737c8b;
-@border-color__MonthView-item-selected-startEnd-hover:                        #ff7033;
-@background_MonthView-item:                                                   #424851;
-@color_MonthView-item:                                                        #b8b8b8;
-@border-color__MonthView-item-selected:                                       #b8b8b8;
 
 // Highlight
 @highlight-text-bg: #535c68;
