--- a/Controls/_datePopup/_dateRange.less
+++ b/Controls/_datePopup/_dateRange.less
@@ -70,20 +70,20 @@
       content: '';
       position: absolute;
       bottom: @monthnav_year_height_datePicker/2;
-      right: @width_MonthView/14;
+      right: @monthview_width_monthSlider/14;
       border-top: @monthnav_year_separator_thickness_datePicker solid @monthnav_year_separator_color_datePicker;
    }
 }
 
 .controls-PeriodDialog-DateRangeItem__separator-sticky-support {
    &:after {
-      left: @monthnav_width_datePicker + @width_MonthView/14;
+      left: @monthnav_width_datePicker + @monthview_width_monthSlider/14;
    }
 }
 
 .controls-PeriodDialog-DateRangeItem__separator-not-sticky-support {
    &:after {
-      left: @width_MonthView/14;
+      left: @monthview_width_monthSlider/14;
    }
 }
 
