https://online.sbis.ru/opendoc.html?guid=90bcf245-5f5b-44ac-8767-7e5b8e5d5341

--- a/Controls-default-theme/controls/_MonthView.less
+++ b/Controls-default-theme/controls/_MonthView.less
@@ -1,5 +1,6 @@
 @background_MonthView:                                            @background-color_default;
 @background_MonthView-item:                                       #F4F4F4;
+@border-color_MonthView-item:                                     #FFFFFF;
 @background_MonthView-item-selected:                              #F0F5FB;
 @background_MonthView-item-hover:                                 #E6ECFA;
 @height_MonthView-item:                                           39px;
