--- a/Controls/_grid/layout/table/_Table.less
+++ b/Controls/_grid/layout/table/_Table.less
@@ -65,9 +65,10 @@
     height: @min-height_Grid-header;
   }
 
-  .controls-Grid__results {
-    display: table-row-group;
-  }
+   // Этот стиль задаётся для tr и при display: table-row-group ломает вёрстку в IE/Edge
+   .controls-Grid__results {
+      display: table-row;
+   }
 
   .controls-Grid__results-cell {
     display: table-cell;
