--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -94,7 +94,7 @@
 }
 //Так как мы добавляем отступы у крошек, чтобы обводка dragNDrop не обрезалась на счет overflow-hidden, появляется лишний левый отступ. Убираем его отрицательным margin
 .controls-BreadCrumbsView_theme-@{themeName} {
-   margin-left: -@spacing_default_xxs;
+   margin-left: -@spacing_breadcrumbsView;
 }
 .controls-BreadCrumbsView__dropTarget_withArrow, .controls-BreadCrumbsView__dropTarget_withoutArrow {
    &:after {
