--- a/Controls/_operations/MultiSelector/_MultiSelector.less
+++ b/Controls/_operations/MultiSelector/_MultiSelector.less
@@ -11,14 +11,10 @@
 }
 
 .controls-operationsPanelV__loadingIndicatorImg-wrapper {
+  position: relative;
   margin-left: @loadingIndicator_offset-left_multiSelectorButton;
-}
-
-.controls-operationsPanelV__loadingIndicatorImg {
-  background: @background-url_LoadingIndicator-s 0 0 no-repeat;
   width: @size_LoadingIndicator-s;
   height: @size_LoadingIndicator-s;
-  background-size: @size_LoadingIndicator-s;
 }
 
 .controls-operationsPanelV__container {
