https://online.sbis.ru/opendoc.html?guid=26181572-343c-4b2e-8b40-143f9fb678fb

--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -92,7 +92,7 @@
    flex-grow: 1;
    max-width: 100%;
 }
-//Так как мы добавляем отступы у крошек, чтобы обводка dragNDrop не обрезалась на счет overflow-hidden, появляется лишний левый отступ. Убираем его отрицательным margin
+//Так как мы добавляем отступы у крошек, чтобы обводка dragNDrop не обрезалась за счет overflow-hidden, появляется лишний левый отступ. Делаем отрицательный margin на такое же значение как правый отступ у крошек.
 .controls-BreadCrumbsView_theme-@{themeName} {
    margin-left: -@spacing_default_xxs;
 }
