--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -95,7 +95,7 @@
 
 //Так как мы добавляем отступы у крошек, чтобы обводка dragNDrop не обрезалась за счет overflow-hidden, появляется лишний левый отступ. Делаем отрицательный margin на такое же значение, как левый отступ у первой крошки.
 .controls-BreadCrumbsView_theme-@{themeName} {
-    margin-left: -@spacing_default_xxs;
+    margin-left: -@spacing_breadcrumbsView;
  }
 
 .controls-BreadCrumbsView__dropTarget_withArrow, .controls-BreadCrumbsView__dropTarget_withoutArrow {
